2014-07-31  Zalan Bujtas  <zalan@apple.com>

        Subpixel rendering: Region painting needs to take subpixel accumulation into account.
        https://bugs.webkit.org/show_bug.cgi?id=135469

        Similar to non-region painting, when the context is translated, we need to propagate
        the subpixel difference so that renderers get snapped to the same position as if they
        were not part of a region.

        Reviewed by Simon Fraser.

        Covered by existing tests/not testable (webkit.org/b/135470)

        * html/shadow/MediaControlElements.cpp:
        (WebCore::MediaControlTextTrackContainerElement::createTextTrackRepresentationImage):
        * page/FrameView.cpp:
        (WebCore::FrameView::paintContents):
        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::paint):
        (WebCore::RenderLayer::calculateClipRects):
        * rendering/RenderLayer.h:

2014-07-31  Jer Noble  <jer.noble@apple.com>

        [iOS] Video in an <embed> has a bad aspect ratio when in fullscreen mode.
        https://bugs.webkit.org/show_bug.cgi?id=135481

        Reviewed by Simon Fraser.

        Do not change the gravity of our AVPlayerLayer when in full screen mode; its gravity
        is controlled by setVideoFullscreenGravity(), and should not be affected by style changes.

        * platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
        (WebCore::MediaPlayerPrivateAVFoundationObjC::updateVideoLayerGravity):

2014-07-31  Beth Dakin  <bdakin@apple.com>

        Hit-testing broken in WebKit 1 views with AppKit's contentInsets
        https://bugs.webkit.org/show_bug.cgi?id=135434
        -and corresponding-
        <rdar://problem/17850323>

        Reviewed by Benjamin Poulain.

        AppKit's contentInsets are factored into scroll positions and mouse positions, but
        in WebCore, we generally want all of those things to be factored out so that, for