@@ -19,7 +19,11 @@ find_package(JPEG REQUIRED)
 find_package(PNG REQUIRED)
 find_package(ZLIB REQUIRED)
 
-find_package(GLIB 2.38.0 REQUIRED COMPONENTS gio gobject gthread)
+set(glib_components gio gobject gthread)
+if (ENABLE_GEOLOCATION)
+    list(APPEND glib_components gio-unix)
+endif ()
+find_package(GLIB 2.38.0 REQUIRED COMPONENTS ${glib_components})
 find_package(LibSoup 2.42.0 REQUIRED)
 
 set(WTF_USE_SOUP 1)
